[package]
name = "openaiimages"
version = "0.9.0"
description = "A sample Tauri v2 app based on React"
authors = ["Jason Levitt"]
edition = "2021"

[lib]
name = "openaiimages_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = [] }
serde_json = "1.0"
tauri-plugin-shell = { version = "2.0.0-beta.3", features = [] }
tauri-plugin-store = { version = "2.0.0-beta.4", features = [] }
tauri-plugin-dialog = { version = "2.0.0-beta.4", features = [] }
tauri-plugin-fs = { version = "2.0.0-beta.4", features = [] }
tauri-plugin-http = { version = "2.0.0-beta.4", features = ["rustls-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
