[package]
name = "openaiimages"
version = "1.0.0"
description = "A sample Tauri v2 app based on React"
authors = ["Jason Levitt"]
edition = "2021"

[lib]
name = "openaiimages_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-os = { version = "2.0.1", features = [] }
tauri-plugin-shell = { version = "2.0.2", features = [] }
tauri-plugin-store = { version = "2.1.0", features = [] }
tauri-plugin-dialog = { version = "2.0.3", features = [] }
tauri-plugin-fs = { version = "2.0.3", features = [] }
tauri-plugin-http = { version = "2.0.3", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

